@@ -297,11 +297,9 @@ VideoPanel::film_changed (Film::Property property)
 	switch (property) {
 	case Film::VIDEO_FRAME_RATE:
 	case Film::CONTAINER:
-		setup_description ();
-		setup_sensitivity ();
-		break;
 	case Film::RESOLUTION:
 		setup_description ();
+		setup_sensitivity ();
 		break;
 	case Film::REEL_TYPE:
 	case Film::INTEROP:
