@@ -1,3 +1,8 @@
+2018-10-14  Carl Hetherington  <cth@carlh.net>
+
+	* Give a better reason for not referring to DCPs
+	when there is a resolution mismatch.
+
 2018-09-27  Carl Hetherington  <cth@carlh.net>
 
 	* Updated it_IT translation from Riccardo Mantani.
